Offset save files by number of already downloaded rows

--- a/SEDAR_web_scraper.ipynb
+++ b/SEDAR_web_scraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c88465de",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "1b9e3ceb",
    "metadata": {},
    "outputs": [],
@@ -87,10 +87,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ab853a3c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Company</th>\n",
+       "      <th>SEDAR_url</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3742245 Canada Ltd.</td>\n",
+       "      <td>https://www.sedar.com/DisplayProfile.do?lang=E...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>37 Capital Inc.</td>\n",
+       "      <td>https://www.sedar.com/DisplayProfile.do?lang=E...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>380 Samuel de Champlain Ltd Partnership</td>\n",
+       "      <td>https://www.sedar.com/DisplayProfile.do?lang=E...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3MV Energy Corp.</td>\n",
+       "      <td>https://www.sedar.com/DisplayProfile.do?lang=E...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3 PARKDALE LIMITED PARTNERSHIP</td>\n",
+       "      <td>https://www.sedar.com/DisplayProfile.do?lang=E...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                   Company  \\\n",
+       "0                      3742245 Canada Ltd.   \n",
+       "1                          37 Capital Inc.   \n",
+       "2  380 Samuel de Champlain Ltd Partnership   \n",
+       "3                         3MV Energy Corp.   \n",
+       "4           3 PARKDALE LIMITED PARTNERSHIP   \n",
+       "\n",
+       "                                           SEDAR_url  \n",
+       "0  https://www.sedar.com/DisplayProfile.do?lang=E...  \n",
+       "1  https://www.sedar.com/DisplayProfile.do?lang=E...  \n",
+       "2  https://www.sedar.com/DisplayProfile.do?lang=E...  \n",
+       "3  https://www.sedar.com/DisplayProfile.do?lang=E...  \n",
+       "4  https://www.sedar.com/DisplayProfile.do?lang=E...  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Load the data\n",
     "df = pd.read_csv(\"sedar_companies.csv\")\n",
@@ -353,7 +429,7 @@
     "    r = pd.concat([df.iloc[[i]], r], axis=1)\n",
     "\n",
     "    # Save to CSV\n",
-    "    r.to_csv(\"./company/{}.csv\".format(i), index=False)\n",
+    "    r.to_csv(\"./company/{}.csv\".format(i+len(os.listdir('./company'))), index=False)\n",
     "\n",
     "    # Wait 15 seconds\n",
     "    time.sleep(15)"
@@ -362,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75c4a070",
+   "id": "3a5f4a82",
    "metadata": {},
    "outputs": [],
    "source": []
