Revert SEDAR_web_scraper.ipynb

--- a/SEDAR_web_scraper.ipynb
+++ b/SEDAR_web_scraper.ipynb
@@ -96,7 +96,7 @@
     "df = pd.read_csv(\"sedar_companies.csv\")\n",
     "\n",
     "# Split the data into 4\n",
-    "df = np.array_split(df, 4)[1]\n",
+    "df = np.array_split(df, 4)[0]\n",
     "\n",
     "# If \"company\" directory does not exist, create it\n",
     "if not os.path.exists('company'):\n",
@@ -357,7 +357,7 @@
     "    r = pd.concat([df.iloc[[i]], r], axis=1)\n",
     "\n",
     "    # Save to CSV\n",
-    "    r.to_csv(\"./company/{}_2.csv\".format(i+1+numFiles), index=False)\n",
+    "    r.to_csv(\"./company/{}.csv\".format(i+1+numFiles), index=False)\n",
     "\n",
     "    # Wait 15 seconds\n",
     "    time.sleep(15)"
